[gd_scene load_steps=3 format=3 uid="uid://34dbo0xlihr"]

[ext_resource type="Script" path="res://scenes/ui/menus/main_menu.gd" id="1_q3n4f"]
[ext_resource type="Theme" path="res://scenes/ui/title_theme.tres" id="2_m7nol"]

[node name="MainMenu" type="MarginContainer" node_paths=PackedStringArray("default_focus")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_q3n4f")
default_focus = NodePath("VBoxContainer/VBoxContainer/PlayButton")
can_go_back = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m7nol")
text = "Corsair Warfare"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VersionLabel" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "v0.1.3-dev"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LinkButton" type="LinkButton" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
text = "https://frie.dev/corsair-warfare"
uri = "https://frie.dev/corsair-warfare"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
